--- a/app.json
+++ b/app.json
@@ -1,12 +1,8 @@
 {
   "expo": {
-    "name": "drinklotto",
-    "slug": "drinklotto",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "name": "12th Ave Bartender",
+    "slug": "12thavebartender",
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -19,9 +15,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
