--- a/app.json
+++ b/app.json
@@ -19,6 +19,10 @@
     "ios": {
       "supportsTablet": true
     },
+    "android": {
+      "package": "com.alangfiles.drinkmaker12thavebartender",
+      "versionCode": 1
+    },
     "web": {
       "favicon": "./assets/images/favicon.png"
     }
